<resources>
    <!--  Activity Main String.  -->
    <string name="app_name">RoomDatabaseSample</string>
    <string name="string_add_money">Add Money</string>
    <string name="string_money">31 000</string>
    <string name="string_dolar_sign">$</string>
    <string name="string_usd">USD</string>
    <string name="string_transfer_funds">Transfer Funds</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>