<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:background="@drawable/box"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/price"
            style="@style/main_title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/font"
            android:text="@string/string_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            style="@style/main_subTitle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_dolar_sign"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/price" />

        <TextView
            android:id="@+id/textView3"
            style="@style/main_subTitle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/string_usd"
            app:layout_constraintEnd_toEndOf="@+id/price"
            app:layout_constraintStart_toStartOf="@+id/price"
            app:layout_constraintTop_toBottomOf="@+id/price" />

        <Button
            android:id="@+id/button_add_money"
            style="@style/main_button_style"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:text="@string/string_add_money"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_transfer"
            style="@style/main_button_style"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="36dp"
            android:fontFamily="@font/gilroy_medium"
            android:text="@string/string_transfer_funds"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/wallet_float_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:contentDescription="TODO"
            android:src="@drawable/ic_main_bottom_add"
            app:layout_anchor="@id/wallet_bottom_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:maxImageSize="16dp"
            app:tint="@android:color/white" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/wallet_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:backgroundTint="@color/white"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:fabAlignmentMode="center"
            app:fabCradleRoundedCornerRadius="0dp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                app:elevation="0dp"
                app:labelVisibilityMode="unlabeled"
                app:menu="@menu/main_bottom_menu" />

        </com.google.android.material.bottomappbar.BottomAppBar>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>